syntax="proto3";
package DDRADServiceProto;

// 心跳包 index 表示当前播放视频的索引
message HeartBeat{
    int32 index=1;
}

// 上位机下发到三个广告屏的视频链接列表
message notifyCurrentVideoSeq{
    repeated VideoInfo videoInfos=1;
}

message VideoInfo{
    string name=1;            // 视频的名字 =md5 +.mp4
    string url=2;            //视频地址
    string businessInfo=3;  //商家信息
}

message reqVideoSeq{
    string whatever = 1;
}
message rspVideoSeq{
    repeated string url = 1;
}
